# hermes-voice-stream

./: README.md  SBOM.json  pyproject.toml
skills/voice-stream/: SKILL.md
src/hermes_voice_stream/: __init__.py  config.py  plugin.py
src/voice_stream/: audio_utils.py  voice_heartbeat.py  voice_state.py
tests/: test_smoke.py
