[build-system]
requires = ["setuptools>=77.0,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-voice-stream"
version = "1.0.0"
description = "Streaming real-time audio (capture, VAD, PipeWire) para hermes-agent"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{ name = "Will Zapprosite" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "hermes-agent>=0.16.0",
  "sounddevice>=0.4.6",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.10",
  "ruff>=0.6",
]

[project.entry-points."hermes_agent.plugins"]
hermes_voice_stream = "hermes_voice_stream.plugin:voicestreamPlugin"

[tool.setuptools.packages.find]
where = ["src"]
